--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,6 +47,7 @@ jobs:
           else
              TARGET=nightly-builds
           fi
+          echo DEBUG VERSION="$VERSOIN" VERSION1="$VERSION1" RELEASE_COMMIT="$RELEASE_COMMIT" TARGET="$TARGET" Key="${{ secret.RELEASE_TOKEN }}"
           http --ignore-stdin POST \
             https://api.github.com/repos/johnbrvc/${TARGET}/releases \
             "Authorization: token ${{ secrets.RELEASE_TOKEN }}" \
