--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,15 +47,13 @@ jobs:
           else
              TARGET=nightly-builds
           fi
-          echo DEBUG VERSION="$VERSOIN" VERSION1="$VERSION1" RELEASE_COMMIT="$RELEASE_COMMIT" TARGET="$TARGET" Key="${{ secrets.RELEASE_TOKEN }}"
-          http --ignore-stdin POST \
+          echo DEBUG VERSION="$VERSION" VERSION1="$VERSION1" RELEASE_COMMIT="$RELEASE_COMMIT" TARGET="$TARGET" Key="${{ secrets.RELEASE_TOKEN }}"
+          curl -X POST \
+            -H "Authorization: token ${{ secrets.RELEASE_TOKEN }}" \
+            -H "Accept: application/vnd.github.v3+json" \
             https://api.github.com/repos/johnbrvc/${TARGET}/releases \
-            "Authorization: token ${{ secrets.RELEASE_TOKEN }}" \
-            "Accept: application/vnd.github.v3+json" \
-            tag_name=v$VERSION1 \
-            target_commitish=$RELEASE_COMMIT \
-            name=v$VERSION \
-            prerelease:=true | tee ~/new-release.txt
+             -d '{"tag_name":"v$VERSION1", "target_commitish":"$RELEASE_COMMIT", "name":"v$VERSION" }' \
+             tee ~/new-release.txt
           RELEASE_ID=$(cat ~/new-release.txt | jq .id)
           RELEASE_ASSET_UPLOAD_URL=https://uploads.github.com/repos/johnbrvc/${TARGET}/releases/${RELEASE_ID}/assets
           cd dist
