--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,10 +47,10 @@ jobs:
           else
              TARGET=nightly-builds
           fi
-          VERSION=$VERSION"1"
-          VERSION1=$VERSION1"1"
+          VERSION=$VERSION"2"
+          VERSION1=$VERSION1"2"
           echo DEBUG VERSION="$VERSION" VERSION1="$VERSION1" RELEASE_COMMIT="$RELEASE_COMMIT" TARGET="$TARGET" Key="${{ secrets.RELEASE_TOKEN }}"
-          curl -q -X POST \
+          curl --silent --retry 6 --max-time 300 -X POST \
             -H "Authorization: token ${{ secrets.RELEASE_TOKEN }}" \
             -H "Accept: application/vnd.github.v3+json" \
             https://api.github.com/repos/johnbrvc/${TARGET}/releases \
@@ -65,29 +65,40 @@ jobs:
             echo $archive...
             case "$archive" in
               *.zip)
-                cat $archive | http --timeout 300 POST ${RELEASE_ASSET_UPLOAD_URL}\?name=$archive \
-                  "Authorization: token ${{ secrets.RELEASE_TOKEN }}" \
-                  'Accept: application/vnd.github.v3+json' \
-                  'Content-Type: application/zip' | jq .state
+                cat $archive | \
+                  curl  --silent --retry 6 --max-time 300 -X POST \
+                    -H "Authorization: token ${{ secrets.RELEASE_TOKEN }}" \
+                    -H 'Accept: application/vnd.github.v3+json' \
+                    -H 'Content-Type: application/zip' \
+                    ${RELEASE_ASSET_UPLOAD_URL}\?name=$archive \
+                  	| jq .state
                 ;;
               *.tar.gz)
-                cat $archive | http --timeout 300 POST ${RELEASE_ASSET_UPLOAD_URL}\?name=$archive \
-                  "Authorization: token ${{ secrets.RELEASE_TOKEN }}" \
-                  'Accept: application/vnd.github.v3+json' \
-                  'Content-Type: application/gzip' | jq .state
+                  cat $archive | curl  --silent --retry 6 --max-time 300 -X POST \
+                    -H "Authorization: token ${{ secrets.RELEASE_TOKEN }}" \
+                    -H 'Accept: application/vnd.github.v3+json' \
+                    -H 'Content-Type: application/gzip' \
+                    ${RELEASE_ASSET_UPLOAD_URL}\?name=$archive \
+                  	| jq .state
                 ;;
             esac
             if [ -f $archive.sha256.txt ]; then
-                echo $archive.sha256.txt
-                cat $archive.sha256 | http POST ${RELEASE_ASSET_UPLOAD_URL}\?name=$archive.sha256 \
-                  "Authorization: token ${{ secrets.RELEASE_TOKEN }}" \
-                  'Accept: application/vnd.github.v3+json' \
-                  'Content-Type: text/plain' | jq .state
-                echo $archive.sha512...
-                cat $archive.sha512 | http POST ${RELEASE_ASSET_UPLOAD_URL}\?name=$archive.sha512 \
-                  "Authorization: token ${{ secrets.RELEASE_TOKEN }}" \
-                  'Accept: application/vnd.github.v3+json' \
-                  'Content-Type: text/plain' | jq .state
+                echo $archive.sha256.txt...
+                cat $archive.sha256.txt | curl  --silent --retry 6 --max-time 300 -X POST \
+                    -H "Authorization: token ${{ secrets.RELEASE_TOKEN }}" \
+                    -H 'Accept: application/vnd.github.v3+json' \
+                    -H 'Content-Type: text/plain' \
+                    ${RELEASE_ASSET_UPLOAD_URL}\?name=$archive.sha256.txt \
+                  	| jq .state
+            fi
+            if [ -f $archive.sha512.txt ]; then
+                echo $archive.sha512.txt...
+                cat $archive.sha512.txt | curl  --silent --retry 6 --max-time 300 -X POST \
+                    -H "Authorization: token ${{ secrets.RELEASE_TOKEN }}" \
+                    -H 'Accept: application/vnd.github.v3+json' \
+                    -H 'Content-Type: text/plain' \
+                    ${RELEASE_ASSET_UPLOAD_URL}\?name=$archive.sha512.txt \
+                  	| jq .state
             fi
           done
   update-website:
