--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -65,8 +65,7 @@ jobs:
             echo $archive...
             case "$archive" in
               *.zip)
-                cat $archive | \
-                  curl  --silent --retry 6 --max-time 300 -X POST \
+                  curl  --silent --retry 6 --max-time 300 -d "@$archive" -X POST \
                     -H "Authorization: token ${{ secrets.RELEASE_TOKEN }}" \
                     -H 'Accept: application/vnd.github.v3+json' \
                     -H 'Content-Type: application/zip' \
@@ -74,7 +73,7 @@ jobs:
                   	| jq .state
                 ;;
               *.tar.gz)
-                  cat $archive | curl  --silent --retry 6 --max-time 300 -X POST \
+                  cat $archive | curl  --silent --retry 6 --max-time 300 -d "@$archive"-X POST \
                     -H "Authorization: token ${{ secrets.RELEASE_TOKEN }}" \
                     -H 'Accept: application/vnd.github.v3+json' \
                     -H 'Content-Type: application/gzip' \
@@ -84,7 +83,7 @@ jobs:
             esac
             if [ -f $archive.sha256.txt ]; then
                 echo $archive.sha256.txt...
-                cat $archive.sha256.txt | curl  --silent --retry 6 --max-time 300 -X POST \
+                curl  --silent --retry 6 --max-time 300 -d "@$archive.sha256.txt" -X POST \
                     -H "Authorization: token ${{ secrets.RELEASE_TOKEN }}" \
                     -H 'Accept: application/vnd.github.v3+json' \
                     -H 'Content-Type: text/plain' \
@@ -93,7 +92,7 @@ jobs:
             fi
             if [ -f $archive.sha512.txt ]; then
                 echo $archive.sha512.txt...
-                cat $archive.sha512.txt | curl  --silent --retry 6 --max-time 300 -X POST \
+                curl  --silent --retry 6 --max-time 300 -d "@$archive.sha512.txt" -X POST \
                     -H "Authorization: token ${{ secrets.RELEASE_TOKEN }}" \
                     -H 'Accept: application/vnd.github.v3+json' \
                     -H 'Content-Type: text/plain' \
