--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -70,15 +70,17 @@ jobs:
                     -H 'Accept: application/vnd.github.v3+json' \
                     -H 'Content-Type: application/zip' \
                     ${RELEASE_ASSET_UPLOAD_URL}\?name=$archive \
-                  	| jq .state
+                    | cat -u
+#                  	| jq .state
                 ;;
               *.tar.gz)
-                  cat $archive | curl --retry 6 --max-time 300 --data-binary "@$archive"-X POST \
+                  cat $archive | curl --retry 6 --max-time 300 --data-binary "@$archive" -X POST \
                     -H "Authorization: token ${{ secrets.RELEASE_TOKEN }}" \
                     -H 'Accept: application/vnd.github.v3+json' \
                     -H 'Content-Type: application/gzip' \
                     ${RELEASE_ASSET_UPLOAD_URL}\?name=$archive \
-                  	| jq .state
+                    | cat -u
+#                  	| jq .state
                 ;;
             esac
             if [ -f $archive.sha256.txt ]; then
@@ -88,7 +90,8 @@ jobs:
                     -H 'Accept: application/vnd.github.v3+json' \
                     -H 'Content-Type: text/plain' \
                     ${RELEASE_ASSET_UPLOAD_URL}\?name=$archive.sha256.txt \
-                  	| jq .state
+                    | cat -u
+#                  	| jq .state
             fi
             if [ -f $archive.sha512.txt ]; then
                 echo $archive.sha512.txt...
@@ -97,7 +100,8 @@ jobs:
                     -H 'Accept: application/vnd.github.v3+json' \
                     -H 'Content-Type: text/plain' \
                     ${RELEASE_ASSET_UPLOAD_URL}\?name=$archive.sha512.txt \
-                  	| jq .state
+                    | cat -u
+#                  	| jq .state
             fi
           done
   update-website:
