--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,12 +50,12 @@ jobs:
           VERSION=$VERSION"7"
           VERSION1=$VERSION1"7"
           echo DEBUG VERSION="$VERSION" VERSION1="$VERSION1" RELEASE_COMMIT="$RELEASE_COMMIT" TARGET="$TARGET" Key="${{ secrets.RELEASE_TOKEN }}"
-          echo GITHUB_API_URL=${GITHUB_API_URL} GITHUB_REPOSITORY_OWNER=${GITHUB_REPOSITORY_OWNER}
+          echo GITHUB_API_URL=${GITHUB_API_URL} GITHUB_REPOSITORY_OWNER=${GITHUB_REPOSITORY_OWNER} GITHUB_SHA=$GITHUB_SHA
           curl --silent --show-error --retry 6 --max-time 300 -X POST \
             -H "Authorization: token ${{ secrets.RELEASE_TOKEN }}" \
             -H "Accept: application/vnd.github.v3+json" \
             ${GITHUB_API_URL}/repos/${GITHUB_REPOSITORY_OWNER}/${TARGET}/releases \
-             -d '{"tag_name":"'"v$VERSION1"'", "target_commitish":"'"$GITHUB_SHA"'", "name":"'"v$VERSION"'" }' | \
+             -d '{"tag_name":"'"v$VERSION1"'", "target_commitish":"master", "name":"'"v$VERSION"'" }' | \
              tee ~/new-release.txt
           RELEASE_ASSET_UPLOAD_URL=$(cat ~/new-release.txt | jq .upload_url | sed -e 's/"//g' -e 's#/assets{.*#/assets#' )
           cd dist
