--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,10 +39,16 @@ jobs:
       - name: Create GitHub release
         shell: bash
         run: |
+          eval $(ssh-agent -s)
+          echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add -
+          mkdir -p ~/.ssh
+          chmod 700 ~/.ssh
+          ssh-keyscan -t rsa github.com >> ~/.ssh/known_hosts
+          git config --global user.email "johnbrvc@gmail.com"
+          git config --global user.name "john"
           export VERSION=`echo dist/pc2-*.zip | sed 's#^dist.*pc2-\(.*\).zip*#\1#'`
           export VERSION1=`echo dist/pc2-*.zip | sed 's#^dist.*pc2-\(.*\).zip*#\1#' | sed 's/~.*//'`
-          RELEASE_COMMIT=$GITHUB_SHA
-          if [ github.ref == 'refs/heads/master' ]; then
+           if [ github.ref == 'refs/heads/master' ]; then
              TARGET=builds
           else
              TARGET=nightly-builds
