--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,6 +54,7 @@ jobs:
           else
              TARGET=nightly-builds
           fi
+          cur_dir=`pwd`
           mkdir ~/builds
           cd ~/builds
           git clone git@github.com:${GITHUB_REPOSITORY_OWNER}/${TARGET}.git .
@@ -61,9 +62,10 @@ jobs:
           git commit --allow-empty -m "Add build $VERSION"
           git push
           RELEASE_COMMIT=$(git rev-parse HEAD)
-          cd ~
+          cd ""$cur_dir""
           VERSION=$VERSION"9"
           VERSION1=$VERSION1"9"
+          echo cur_dir="$cur_dir"
           echo DEBUG VERSION="$VERSION" VERSION1="$VERSION1" RELEASE_COMMIT="$RELEASE_COMMIT" TARGET="$TARGET" Key="${{ secrets.RELEASE_TOKEN }}"
           echo GITHUB_API_URL=${GITHUB_API_URL} GITHUB_REPOSITORY_OWNER=${GITHUB_REPOSITORY_OWNER} GITHUB_SHA=$GITHUB_SHA GITHUB_REF_NAME=$GITHUB_REF_NAME
           curl --silent --show-error --retry 6 --max-time 300 -X POST \
