--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,9 +62,9 @@ jobs:
           git commit --allow-empty -m "Add build $VERSION"
           git push
           RELEASE_COMMIT=$(git rev-parse HEAD)
-          cd ""$cur_dir""
-          VERSION=$VERSION"9"
-          VERSION1=$VERSION1"9"
+          cd "$cur_dir"
+          VERSION=$VERSION"1"
+          VERSION1=$VERSION1"1"
           echo cur_dir="$cur_dir"
           echo DEBUG VERSION="$VERSION" VERSION1="$VERSION1" RELEASE_COMMIT="$RELEASE_COMMIT" TARGET="$TARGET" Key="${{ secrets.RELEASE_TOKEN }}"
           echo GITHUB_API_URL=${GITHUB_API_URL} GITHUB_REPOSITORY_OWNER=${GITHUB_REPOSITORY_OWNER} GITHUB_SHA=$GITHUB_SHA GITHUB_REF_NAME=$GITHUB_REF_NAME
